<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gbc"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginTop="256dp"
        android:text="@string/easy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="107dp"
        android:layout_height="46dp"
        android:layout_marginTop="68dp"
        android:text="@string/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="46dp"
        android:layout_marginTop="45dp"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="52dp"
        android:text="@string/memory_game"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:layout_marginTop="36dp"
        android:text="@string/test_your_memory_with_this_memory_game_first_select_the_difficulty_level_the_higher_the_number_the_more_cards_are_in_the_memo_game_on_the_game_board_there_are_always_two_identical_images_start_the_game_by_flipping_a_card_then_try_to_find_another_card_that_has_the_same_image_as_the_first_if_you_can_t_find_a_pair_the_flipped_cards_will_be_flipped_back_with_the_face_down_try_to_remember_these_images_as_it_becomes_easier_to_find_pairs_the_longer_you_play"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>